ezyplot-x1/force-app/main/default/objects/Land_Registry_transaction__c/Land_Registry_transaction__c.object-meta.xml
<CustomObject>
    <label>LR transaction</label>
    <nameField>
        <label>LR transaction</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>LR transactions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>