ezyplot-x1/force-app/main/default/objects/Land_Registry_transaction__c/fields/county__c.field-meta.xml
<CustomField>
    <fullName>county__c</fullName>
    <label>county</label>
    <length>255</length>
    <type>Text</type>
</CustomField>