ezyplot-x1/force-app/main/default/objects/Land_Registry_transaction__c/fields/district__c.field-meta.xml
<CustomField>
    <fullName>district__c</fullName>
    <label>district</label>
    <length>255</length>
    <type>Text</type>
</CustomField>