ezyplot-x1/force-app/main/default/objects/Land_Registry_transaction__c/fields/estate_type__c.field-meta.xml
<CustomField>
    <fullName>estate_type__c</fullName>
    <label>estate_type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>