ezyplot-x1/force-app/main/default/objects/Land_Registry_transaction__c/fields/locality__c.field-meta.xml
<CustomField>
    <fullName>locality__c</fullName>
    <label>locality</label>
    <length>255</length>
    <type>Text</type>
</CustomField>