ezyplot-x1/force-app/main/default/objects/Land_Registry_transaction__c/fields/new_build__c.field-meta.xml
<CustomField>
    <fullName>new_build__c</fullName>
    <defaultValue>false</defaultValue>
    <label>new_build</label>
    <type>Checkbox</type>
</CustomField>