ezyplot-x1/force-app/main/default/objects/Land_Registry_transaction__c/fields/paon__c.field-meta.xml
<CustomField>
    <fullName>paon__c</fullName>
    <label>paon</label>
    <length>255</length>
    <type>Text</type>
</CustomField>