ezyplot-x1/force-app/main/default/objects/Land_Registry_transaction__c/fields/Plot__c.field-meta.xml
<CustomField>
    <fullName>Plot__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Plot</label>
    <referenceTo>Plot__c</referenceTo>
    <relationshipLabel>Land Registry transactions</relationshipLabel>
    <relationshipName>Land_Registry_transactions</relationshipName>
    <type>Lookup</type>
</CustomField>