ezyplot-x1/force-app/main/default/objects/Land_Registry_transaction__c/fields/price_paid__c.field-meta.xml
<CustomField>
    <fullName>price_paid__c</fullName>
    <label>price_paid</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>