ezyplot-x1/force-app/main/default/objects/Land_Registry_transaction__c/fields/Price_sqft__c.field-meta.xml
<CustomField>
    <fullName>Price_sqft__c</fullName>
    <formula>price_paid__c /  Sqft_lookup__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Price sqft</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>