ezyplot-x1/force-app/main/default/objects/Land_Registry_transaction__c/fields/saon__c.field-meta.xml
<CustomField>
    <fullName>saon__c</fullName>
    <label>saon</label>
    <length>255</length>
    <type>Text</type>
</CustomField>