ezyplot-x1/force-app/main/default/objects/Land_Registry_transaction__c/fields/Sqft_lookup__c.field-meta.xml
<CustomField>
    <fullName>Sqft_lookup__c</fullName>
    <formula>Plot__r.Total_floor_area__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sqft lookup</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>