ezyplot-x1/force-app/main/default/objects/Land_Registry_transaction__c/fields/town__c.field-meta.xml
<CustomField>
    <fullName>town__c</fullName>
    <label>town</label>
    <length>255</length>
    <type>Text</type>
</CustomField>