ezyplot-x1/force-app/main/default/objects/Land_Registry_transaction__c/fields/transaction_category__c.field-meta.xml
<CustomField>
    <fullName>transaction_category__c</fullName>
    <label>transaction_category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>