ezyplot-x1/force-app/main/default/objects/Land_Registry_transaction__c/fields/transaction_date__c.field-meta.xml
<CustomField>
    <fullName>transaction_date__c</fullName>
    <label>transaction_date</label>
    <type>Date</type>
</CustomField>