ezyplot-x1/force-app/main/default/objects/Land_Registry_transaction__c/fields/transaction_id__c.field-meta.xml
<CustomField>
    <fullName>transaction_id__c</fullName>
    <label>transaction_id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>