ezyplot-x1/force-app/main/default/objects/Land_Registry_transaction__c/fields/transaction_URL__c.field-meta.xml
<CustomField>
    <fullName>transaction_URL__c</fullName>
    <label>transaction_URL</label>
    <type>Url</type>
</CustomField>